@@ -1,5 +1,11 @@
 2010-08-18  Thomas Vander Stichele  <thomas at apestaart dot org>
 
+	* python/mushin/maemo/start.py:
+	  Add error dialog.
+	  Only show list of things if we didn't have an error.
+
+2010-08-18  Thomas Vander Stichele  <thomas at apestaart dot org>
+
 	* couchdb/views/by-context (added):
 	* couchdb/views/by-context/map.js (added):
 	  Add a view to get things by context.
